fix overflow image

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
-body > * {
+img {
+  max-width: 100%;
+}
+
+body>* {
   max-width: 100%;
 }
 
